feat: implement role-based auth, appointment completion flow, and internal medical record creation