@@ -1,10 +1,13 @@
 package com.yt.jpa.hospitalManagement.security;
 
 import com.yt.jpa.hospitalManagement.dto.request.LoginRequestDto;
+import com.yt.jpa.hospitalManagement.dto.request.SignupRequestDto;
 import com.yt.jpa.hospitalManagement.dto.response.LoginResponseDto;
 import com.yt.jpa.hospitalManagement.dto.response.SignupResponseDto;
+import com.yt.jpa.hospitalManagement.entity.Patient;
 import com.yt.jpa.hospitalManagement.entity.User;
 import com.yt.jpa.hospitalManagement.enums.Role;
+import com.yt.jpa.hospitalManagement.repository.PatientRepository;
 import com.yt.jpa.hospitalManagement.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -15,6 +18,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
@@ -24,6 +28,7 @@ public class AuthService {
     private final AuthUtil authUtil;
     private final ModelMapper modelMapper;
     private final PasswordEncoder passwordEncoder;
+    private final PatientRepository patientRepository;
 
     public LoginResponseDto login(LoginRequestDto dto) {
 
@@ -42,7 +47,7 @@ public class AuthService {
         return new LoginResponseDto(token, user.getId());
     }
 
-    public SignupResponseDto registerUser(LoginRequestDto dto){
+    public SignupResponseDto registerUser(SignupRequestDto dto){
         User user = userRepository.findByEmail(dto.getEmail()).orElse(null);
 
         if(user != null){
@@ -52,9 +57,17 @@ public class AuthService {
         user = userRepository.save(User.builder()
                 .email(dto.getEmail())
                 .password(passwordEncoder.encode(dto.getPassword()))
-                .roles(Collections.singleton(Role.ROLE_PATIENT))
+                .roles(Set.of(Role.PATIENT)) // default role
                 .build()
         );
+
+        Patient patient = Patient.builder()
+                .name(dto.getName())
+                .phone(dto.getPhone())
+                .user(user)
+                .build();
+
+        patientRepository.save(patient);
 
         return modelMapper.map(
                 user,
